deployments/resources/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  selector:
    matchLabels:
      app: backend
  replicas: 1
  revisionHistoryLimit: 5
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: 349142834852.dkr.ecr.us-east-2.amazonaws.com/projector-backend:763e68914a71f4fed86aafab65f49f1a780da28a
          resources:
            requests:
              cpu: 100m
              memory: 300Mi
---
apiVersion: v1
kind: Service
metadata:
    name: api-cluster-ip-service
spec:
    type: ClusterIP
    selector:
        component: api
    ports:
         -   port: 8080
             targetPort: 8080
