deployments/resources/mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
spec:
  selector:
    matchLabels:
      app: mongo
  replicas: 1
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
      - name: mongodb
        image: mongo:latest
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongo-persistent-storage
          mountPath: /data/db
      volumes:
      - name: mongo-persistent-storage
        persistentVolumeClaim:
          claimName: mongo-persistent-volume-claim
---
apiVersion: v1
kind: Service
metadata:
    name: mongo-cluster-ip-service
spec:
    type: ClusterIP
    selector:
        component: mongo
    ports:
         -   port: 27017
             targetPort: 27017
